- Fix wx-config output when using NanoSVG library (#23373).

wxGTK:

- Fix key codes with Shift/on non-US keyboards (Ivan Sorokin, #17643, #23379).
- Dramatically optimize adding many items to wxChoice (Ian McInerney, #23443).
- Improve document wxGLCanvas::CreateSurface() (Dan Gudmundsson, #23366).
- Fix loading WebKit2 extension when using wxWebView (Scott Talbert, #23497).

wxMSW:

- Fix (deprecated) build without Unicode support broken in 3.2.2 (#23516).
- Fix setting locale for wxLANGUAGE_UKRAINIAN (Ulrich Telle, #23210).
- Don't reset custom wxToolBar background on system colour change (#23386).
- Fix wxUILocale::GetPreferredUILanguages() under < 10 (Brian Nixon, #23416).
- Fix building with LLVM clang (Sergey Khalyutn, Maarten Bent, #23464).
- Fix discrepancy between GDI and Direct2D in high DPI (Kumazuma, #23486).

wxOSX:

- Add support for wxDP_DROPDOWN under macOS 10.15.4+ (Lauri Nurmi, #23520).
- Fix initial width of empty wxTextCtrl (#23295).
- Fix underlined fonts sometimes appearing without underline (#23264).
- Respect composition mode when drawing bitmaps (#23240).
- Fix background colour of shaped windows, e.g. wxRichToolTip (#23296).
- Fix memory leak in wxFileDialog using custom controls (#23304).

wxUniv:

- Fix resetting the hint in wxTextCtrl when it gets focus (Kvaz1r, #23511).


3.2.2: (released 2023-02-08)
----------------------------

All:

- Fix regression in saving TIFF images that could end up truncated (#23048).
- Fix long standing bug in parsing wxHTTP responses.
- Fix wx-config generation in CMake builds (Maarten Bent, #22806).
- Fix compilation of code using wxTransformMatrix with recent gcc (#22790).
- Fix memory leak when destroying wxThread (Antti Nietosvaara, #22840).
- Add serial number to wxwin.m4 file (#22848).
- Update Expat submodule to include the fix for CVE-2022-40674.
- Update zlib to 1.2.13.1 to include the fix for CVE-2022-37434 (#22919).
- Allow 'T' separator in wxDateTime::ParseDateTime() (Blake-Madden, #22999).