@@ -258,6 +258,7 @@ wxGTK:
 - Dramatically optimize adding many items to wxChoice (Ian McInerney, #23443).
 - Improve document wxGLCanvas::CreateSurface() (Dan Gudmundsson, #23366).
 - Fix loading WebKit2 extension when using wxWebView (Scott Talbert, #23497).
+- Fix editing cells without values in wxDataViewCtrl (#23523).
 
 wxMSW:
 
